src-tauri/cargo_check_output.txt
cargo :     Checking m2m v0.1.0 (C:\Users\ncibi\Desktop\M2M\src-tauri)
At line:1 char:61
+ ... licy -Scope Process -ExecutionPolicy Bypass; cargo check 2>&1 | Out-F ...
+                                                  ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking m2...\M2M\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `ConnectionState`
  --> src\commands.rs:14:28
   |
14 | use crate::network::{self, ConnectionState};
   |                            ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Deserialize` and `Serialize`
  --> src\crypto.rs:19:13
   |
19 | use serde::{Deserialize, Serialize};
   |             ^^^^^^^^^^^  ^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src\network.rs:9:5
  |
9 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `Instant`
  --> src\network.rs:15:25
   |
15 | use tokio::time::{self, Instant};
   |                         ^^^^^^^

warning: unused imports: `HEARTBEAT_INTERVAL_SECS`, `HEARTBEAT_TIMEOUT_SECS`, and `MAX_FRAME_SIZE`
  --> src\network.rs:20:62
   |
20 |     self, validate_frame_size, validate_version, PacketType, MAX_FRAME_SIZE, LENGTH_PREFIX_SIZE,
   |                                                              ^^^^^^^^^^^^^^
21 |     HEARTBEAT_INTERVAL_SECS, HEARTBEAT_TIMEOUT_SECS,
   |     ^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `KeyStore` and `MessageStore`
  --> src\state.rs:15:22
   |
15 | use crate::storage::{KeyStore, MessageStore};
   |                      ^^^^^^^^  ^^^^^^^^^^^^

error[E0308]: mismatched types
  --> src\network.rs:94:15
   |
93 |     match time::timeout(NETWORK_TIMEOUT, stream.read_exact(&mut len_buf)).await {
   |           --------------------------------------------------------------------- this expression has type 
`Result<Result<usize, std::io::Error>, Elapsed>`
94 |         Ok(Ok(())) => {}
   |               ^^ expected `usize`, found `()`

error[E0308]: mismatched types
   --> src\network.rs:108:15
    |
107 |     match time::timeout(NETWORK_TIMEOUT, stream.read_exact(&mut payload)).await {
    |           --------------------------------------------------------------------- this expression has type 
`Result<Result<usize, std::io::Error>, Elapsed>`
108 |         Ok(Ok(())) => {}
    |               ^^ expected `usize`, found `()`

error[E0308]: mismatched types
   --> src\session.rs:185:71
    |
185 |         crypto::verify_signature(&init.identity_pub, &peer_sign_data, &init.signature)
    |         ------------------------                                      ^^^^^^^^^^^^^^^ expected `&[u8; 64]`, 
found `&Vec<u8>`
    |         |
    |         arguments to this function are incorrect
    |
    = note: expected reference `&[u8; 64]`
               found reference `&Vec<u8>`
note: function defined here
   --> src\crypto.rs:119:8
    |
119 | pub fn verify_signature(
    |        ^^^^^^^^^^^^^^^^
...
122 |     signature: &[u8; 64],
    |     --------------------

error[E0308]: mismatched types
   --> src\session.rs:209:13
    |
209 |             signature,
    |             ^^^^^^^^^ expected `Vec<u8>`, found `[u8; 64]`
    |
    = note: expected struct `Vec<u8>`
                found array `[u8; 64]`
help: try using a conversion method
    |
209 |             signature: signature.to_vec(),
    |             ++++++++++          +++++++++

warning: variable does not need to be mutable
   --> src\commands.rs:175:25
    |
175 |         while let Some((mut stream, peer_addr)) = rx.recv().await {
    |                         ----^^^^^^
    |                         |
    |                         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0499]: cannot borrow `conn` as mutable more than once at a time
   --> src\commands.rs:328:25
    |
326 |     let msg_id = conn
    |                  ---- first mutable borrow occurs here
327 |         .session
328 |         .send_text(&mut conn.stream, &content)
    |          ---------      ^^^^ second mutable borrow occurs here
    |          |
    |          first borrow later used by call

error[E0308]: mismatched types
  --> src\session.rs:98:13
   |
98 |             signature,
   |             ^^^^^^^^^ expected `Vec<u8>`, found `[u8; 64]`
   |
   = note: expected struct `Vec<u8>`
               found array `[u8; 64]`
help: try using a conversion method
   |
98 |             signature: signature.to_vec(),
   |             ++++++++++          +++++++++

error[E0308]: mismatched types
   --> src\session.rs:131:75
    |
131 |         crypto::verify_signature(&response.identity_pub, &peer_sign_data, &response.signature)
    |         ------------------------ arguments to this function are incorrect ^^^^^^^^^^^^^^^^^^^ expected `&[u8; 
64]`, found `&Vec<u8>`
    |
    = note: expected reference `&[u8; 64]`
               found reference `&Vec<u8>`
note: function defined here
   --> src\crypto.rs:119:8
    |
119 | pub fn verify_signature(
    |        ^^^^^^^^^^^^^^^^
...
122 |     signature: &[u8; 64],
    |     --------------------

error[E0599]: no function or associated item named `from_slice` found for struct `Signature` in the current scope
   --> src\crypto.rs:126:26
    |
126 |         sign::Signature::from_slice(signature).ok_or(CryptoError::SignatureInvalid)?;
    |                          ^^^^^^^^^^ function or associated item not found in `Signature`
    |
note: if you're trying to build a new `Signature` consider using one of the following associated functions:
      Signature::from_bytes
      Signature::new
   --> C:\Users\ncibi\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\ed25519-1.5.3\src\lib.rs:291:5
    |
291 |     pub fn from_bytes(bytes: &[u8]) -> signature::Result<Self> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
330 |     pub fn new(bytes: [u8; Self::BYTE_SIZE]) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: there is an associated function `from_str` with a similar name
    |
126 -         sign::Signature::from_slice(signature).ok_or(CryptoError::SignatureInvalid)?;
126 +         sign::Signature::from_str(signature).ok_or(CryptoError::SignatureInvalid)?;
    |

error[E0308]: mismatched types
  --> src\identity.rs:82:9
   |
82 |         nonce,
   |         ^^^^^ expected `Vec<u8>`, found `[u8; 16]`
   |
   = note: expected struct `Vec<u8>`
               found array `[u8; 16]`
help: try using a conversion method
   |
82 |         nonce: nonce.to_vec(),
   |         ++++++      +++++++++

error[E0308]: mismatched types
  --> src\identity.rs:94:49
   |
94 |     let signed_invite = SignedInvite { payload, signature };
   |                                                 ^^^^^^^^^ expected `Vec<u8>`, found `[u8; 64]`
   |
   = note: expected struct `Vec<u8>`
               found array `[u8; 64]`
help: try using a conversion method
   |
94 |     let signed_invite = SignedInvite { payload, signature: signature.to_vec() };
   |                                                 ++++++++++          +++++++++

error[E0308]: mismatched types
   --> src\identity.rs:179:9
    |
176 |     crypto::verify_signature(
    |     ------------------------ arguments to this function are incorrect
...
179 |         &signed.signature,
    |         ^^^^^^^^^^^^^^^^^ expected `&[u8; 64]`, found `&Vec<u8>`
    |
    = note: expected reference `&[u8; 64]`
               found reference `&Vec<u8>`
note: function defined here
   --> src\crypto.rs:119:8
    |
119 | pub fn verify_signature(
    |        ^^^^^^^^^^^^^^^^
...
122 |     signature: &[u8; 64],
    |     --------------------

warning: unused variable: `state_clone`
   --> src\commands.rs:165:9
    |
165 |     let state_clone = state.inner().clone();
    |         ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_state_clone`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0308, E0499, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `m2m` (lib) generated 8 warnings
error: could not compile `m2m` (lib) due to 11 previous errors; 8 warnings emitted
